# PayGuard

./: .gitignore  Anchor.toml  Cargo.toml  README.md  aboutproject.md  build-plan.md  package-lock.json  package.json  tsconfig.base.json  waitlistui.html
apps/desktop/: index.html  package.json  styles.css  tsconfig.electron.json  tsconfig.json  vite.config.ts
apps/desktop/electron/: main.ts  preload.ts
apps/desktop/src/: App.tsx  main.ts  preload.ts  renderer.ts  styles.css
apps/desktop/src/components/: app-shell.tsx  header-bar.tsx  quick-stats.tsx  shell-sidebar.tsx  stage-card.tsx  upload-queue-card.tsx  waitlist-notice.tsx
apps/desktop/src/components/home/: activity-card.tsx  trusted-supplier.tsx
apps/desktop/src/pages/: analyze-state-page.tsx  confirm-page.tsx  confirm-transaction-page.tsx  history-page.tsx  home-page.tsx  new-payment-page.tsx  recipients-page.tsx  success-page.tsx
apps/qvac-agent/: package.json  tsconfig.json
apps/qvac-agent/src/: index.ts  normalize.ts  ocr.ts  risk-engine.ts  translation.ts  voice.ts
apps/web/: package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: DocumentUploadPanel.tsx  PaymentIntentForm.tsx  ReceiptCard.tsx  ReviewPanel.tsx  VerdictCard.tsx  WalletConnectCard.tsx  reveal.tsx  waitlist-page.tsx
apps/web/lib/: flow.ts  receipt-store.ts  validators.ts
apps/web/lib/solana/: client.ts  direct-send.ts  guarded-payment.ts
programs/payguard_escrow/: Cargo.toml
programs/payguard_escrow/src/: lib.rs
scripts/: check-structure.mjs
tests/: README.md
(+1 files in other folders)
